hphp/test/slow/php7_backported/scalar-types/scalar_strict_declaration_placement_003.php.expectf

Fatal error: A .php file must begin with '<?hh'. in %s/scalar_strict_declaration_placement_003.php on line 1
